# kathak

./: .env.example  README.md  package-lock.json  pint.json  tailwind.config.js  vite.config.js
.claude/: SECURITY_CHECKLIST.md
ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  yolo_server.py
ai-service/app/: main.py
ai-service/app/api/: router.py
ai-service/app/api/routes/: classify.py  health.py  landmarks.py  predict.py
ai-service/app/application/mudra_classifier/: service.py
ai-service/app/core/: config.py  exceptions.py  logging.py  security.py
ai-service/app/domain/: geometry.py
ai-service/app/domain/hand_landmarks/: models.py  normalization.py  provider.py  service.py  topology.py
ai-service/app/domain/mudra_classifier/: classifier.py  exceptions.py  feature_extraction.py  metadata.py  models.py  request.py
ai-service/app/middleware/: correlation_id.py
ai-service/app/schemas/: classification.py  health.py  landmarks.py  prediction.py
ai-service/app/tests/: conftest.py  test_classification_service.py  test_classifier_factory.py  test_classify.py  test_feature_extraction.py  test_health.py  test_image_codec.py  test_landmarks.py  test_normalization.py  test_predict.py  test_rule_based_classifier.py  test_stub_classifier.py
ai-service/training/: COMMANDS.md  README.md  _ood_check.py  build_classification_dataset.py  build_siddha_dataset.py  capture_webcam.py  eval_classify.py  inspect_dataset.py  merge_webcam.py  train_classify.py
(+203 files in other folders)
