[project]
name = "mediapipe-ai"
version = "1.0.0"
description = "MediaPipe-based hand-landmark AI inference service for Siddha Mudra Therapy"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
